@@ -1,4 +1,9 @@
 # -*- coding: utf-8 -*-
+2008-08-11  Eric Hodel  <drbrain@segment7.net>
+
+	* lib/rubygems/remote_fetcher.rb:  Fix HTTPS support.  Patch #21072 by
+	Alex Arnell.
+
 2008-07-11  Luis Lavena  <luislavena@gmail.com>
 
 	* setup.rb: Properly build --destdir folder structure using Pathname.
